fixes bug 213005 "ASSERTION: OnDataAvailable implementation consumed no data" r=timeless sr=roc